infra-mvp/kubernetes/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mvp
---
apiVersion: v1
kind: Namespace
metadata:
  name: platform
