infra-mvp/kubernetes/minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: mvp
spec:
  selector:
    matchLabels: { app: minio }
  template:
    metadata:
      labels: { app: minio }
    spec:
      containers:
      - name: minio
        image: minio/minio
        args: ["server","/data","--console-address",":9001"]
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: mvp
spec:
  selector: { app: minio }
  ports:
  - port: 9000
